// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MoneyInput /> disabled w/ a min of 1 and max of 5 1`] = `
<input
  className="mui-mi-input-field"
  disabled={true}
  max={5}
  min={1}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  value=""
/>
`;

exports[`<MoneyInput /> where props.value is pi 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  value={3.14}
/>
`;

exports[`<MoneyInput /> with a custom className 1`] = `
<input
  className="mui-mi-input-field custom-class"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  value=""
/>
`;

exports[`<MoneyInput /> with no props 1`] = `
<input
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  value=""
/>
`;
